syntax = "proto3";

package pipeline;

// Repeated wrappers
message FloatList {repeated float values = 1;}
message StringList { repeated string values = 1;}
message BytesList {repeated bytes values = 1;}

message Value {
  oneof kind { 
    // Scalars
    bytes b       = 1;
    string s      = 2;
    float f       = 5;

    // Repeated values
    BytesList bb  = 6;
    StringList ss = 7;
    FloatList ff  = 10;
  }
}

// Universal envelope
message Envelope {
  string config_json = 1;                
  map<string, Value> data = 2;      
}

message Empty {};

// Universal service interface
service DisplayService {

  rpc acquire_yolo_detect(Envelope) returns (Envelope);
  rpc acquire_yolo_track(Envelope)  returns (Envelope);

  rpc display_yolo_detect(Envelope)        returns (Envelope);
  rpc display_yolo_track(Envelope)        returns (Envelope);

  rpc acquire_vggt(Envelope)        returns (Envelope);
  rpc display_vggt(Envelope)        returns (Envelope);
}